===================================
django-registration-redux changelog
===================================

Version 2.5, TBD
----------------
* Feature: Add support for Django 2.1. -
`#337 <https://github.com/macropin/django-registration/pull/337>_`

Version 2.4, 11 April, 2018
----------------
* Bugfix: Updates Spanish translation messages. -
`#333 <https://github.com/macropin/django-registration/pull/333>_`

Version 2.3, 10 April, 2018
----------------
* Bugfix: Updates Spanish translation messages. -
`#330 <https://github.com/macropin/django-registration/pull/330>_`

Version 2.2, 08 February, 2018
----------------
* Bugfix: Updates Russian translation messages. -
`#321 <https://github.com/macropin/django-registration/pull/321>_`

Version 2.1, 17 December, 2018
----------------
* Bugfix: Fix formatting issues in documentation.
`#319 <https://github.com/macropin/django-registration/pull/319>_`
* Bugfix: Use ``get_username()`` instead of directly accessing the username to
support subclasses of ``AbstractBaseUser``
`#318 <https://github.com/macropin/django-registration/pull/318>_`

Version 2.0, 05 December, 2017
----------------
* BACKWARDS-INCOMPATIBLE CHANGE: Remove support for Django < 1.11.
* BACKWARDS-INCOMPATIBLE CHANGE: Remove `registration/urls.py` in favor of
`registration/backends/default/urls.py`
* Feature: Add compatibility for Django 2.0.

Version 1.9, 16 November, 2017
----------------
* Bugfix: Fix ``SupervisedRegistrationProfile`` so expiration depends on
profiles that have completed the entire process or have exceeded the
``ACCOUNT_ACTIVATION_DAYS``  -
`#310 <https://github.com/macropin/django-registration/pull/310>_`
* Bugfix: Prevent resending an activation email if multiple
``RegistrationProfile`` objects exist for the given email address. -
`#311 <https://github.com/macropin/django-registration/pull/311>_`
* Bugfix: Add logging to ``RegistrationProfile.delete_expired_users``, use
``profile.activated`` instead of ``user.is_active``. -