@@ -6,6 +6,8 @@ Version 2.5, TBD
 ----------------
 * Feature: Add support for Django 2.1. -
 `#337 <https://github.com/macropin/django-registration/pull/337>_`
+* Bugfix: Don't delete if user.is_active=True in cleanupregistration. -
+`#333 <https://github.com/macropin/django-registration/pull/333>_`
 
 Version 2.4, 11 April, 2018
 ----------------
